MDEV-6426: Maria DB crashes randomly on creating indexes

Improve OS error messages on Windows.